// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Input> renders 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 16,
        "minHeight": undefined,
      },
      undefined,
    ]
  }
>
  <TextInput
    allowFontScaling={true}
    autoCapitalize="none"
    autoCorrect={false}
    blurOnSubmit={true}
    editable={true}
    keyboardType="default"
    multiline={false}
    onBlur={[Function]}
    onFocus={[Function]}
    placeholderTextColor="#9b9b9b"
    style={
      Array [
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#dbdbdb",
          "borderRadius": 2.5,
          "borderWidth": 1,
          "color": "#4a4a4a",
          "fontSize": 16,
          "fontWeight": "normal",
          "paddingHorizontal": 5,
          "paddingVertical": 7.5,
          "width": "100%",
        },
        false,
        false,
        undefined,
      ]
    }
    underlineColorAndroid="transparent"
    value=""
  />
</View>
`;

exports[`<Input> when {disabled} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 16,
        "minHeight": undefined,
      },
      undefined,
    ]
  }
>
  <TextInput
    allowFontScaling={true}
    autoCapitalize="none"
    autoCorrect={false}
    blurOnSubmit={true}
    editable={false}
    keyboardType="default"
    multiline={false}
    onBlur={[Function]}
    onFocus={[Function]}
    placeholderTextColor="#9b9b9b"
    style={
      Array [
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#dbdbdb",
          "borderRadius": 2.5,
          "borderWidth": 1,
          "color": "#4a4a4a",
          "fontSize": 16,
          "fontWeight": "normal",
          "paddingHorizontal": 5,
          "paddingVertical": 7.5,
          "width": "100%",
        },
        Object {
          "backgroundColor": "#f4f4f4",
          "color": "#cccccc",
        },
        false,
        false,
      ]
    }
    underlineColorAndroid="transparent"
    value=""
  />
</View>
`;

exports[`<Input> when {error} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 16,
        "minHeight": undefined,
      },
      undefined,
    ]
  }
>
  <TextInput
    allowFontScaling={true}
    autoCapitalize="none"
    autoCorrect={false}
    blurOnSubmit={true}
    editable={true}
    keyboardType="default"
    multiline={false}
    onBlur={[Function]}
    onFocus={[Function]}
    placeholderTextColor="#9b9b9b"
    style={
      Array [
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#dbdbdb",
          "borderRadius": 2.5,
          "borderWidth": 1,
          "color": "#4a4a4a",
          "fontSize": 16,
          "fontWeight": "normal",
          "paddingHorizontal": 5,
          "paddingVertical": 7.5,
          "width": "100%",
        },
        false,
        false,
        Object {
          "borderColor": "#ef5160",
        },
      ]
    }
    underlineColorAndroid="transparent"
    value=""
  />
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
        },
        false,
        false,
        false,
        false,
        Object {
          "fontSize": 16,
          "lineHeight": 20.8,
        },
        Object {
          "fontSize": 12,
          "lineHeight": 14.399999999999999,
        },
        false,
        false,
        false,
        false,
        Object {
          "color": "#9b9b9b",
        },
        false,
        false,
        Object {
          "color": "#ef5160",
          "marginVertical": 2.5,
        },
      ]
    }
  >
    Hello World
  </Text>
</View>
`;

exports[`<Input> when {hint} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 16,
        "minHeight": undefined,
      },
      undefined,
    ]
  }
>
  <TextInput
    allowFontScaling={true}
    autoCapitalize="none"
    autoCorrect={false}
    blurOnSubmit={true}
    editable={true}
    keyboardType="default"
    multiline={false}
    onBlur={[Function]}
    onFocus={[Function]}
    placeholderTextColor="#9b9b9b"
    style={
      Array [
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#dbdbdb",
          "borderRadius": 2.5,
          "borderWidth": 1,
          "color": "#4a4a4a",
          "fontSize": 16,
          "fontWeight": "normal",
          "paddingHorizontal": 5,
          "paddingVertical": 7.5,
          "width": "100%",
        },
        false,
        false,
        undefined,
      ]
    }
    underlineColorAndroid="transparent"
    value=""
  />
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
        },
        false,
        false,
        false,
        false,
        Object {
          "fontSize": 16,
          "lineHeight": 20.8,
        },
        Object {
          "fontSize": 12,
          "lineHeight": 14.399999999999999,
        },
        false,
        false,
        false,
        false,
        Object {
          "color": "#9b9b9b",
        },
        false,
        false,
        Object {
          "marginVertical": 2.5,
        },
      ]
    }
  >
    Hello World
  </Text>
</View>
`;

exports[`<Input> when {keyboard} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 16,
        "minHeight": undefined,
      },
      undefined,
    ]
  }
>
  <TextInput
    allowFontScaling={true}
    autoCapitalize="none"
    autoCorrect={false}
    blurOnSubmit={true}
    editable={true}
    keyboardType="numeric"
    multiline={false}
    onBlur={[Function]}
    onFocus={[Function]}
    placeholderTextColor="#9b9b9b"
    style={
      Array [
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#dbdbdb",
          "borderRadius": 2.5,
          "borderWidth": 1,
          "color": "#4a4a4a",
          "fontSize": 16,
          "fontWeight": "normal",
          "paddingHorizontal": 5,
          "paddingVertical": 7.5,
          "width": "100%",
        },
        false,
        false,
        undefined,
      ]
    }
    underlineColorAndroid="transparent"
    value=""
  />
</View>
`;

exports[`<Input> when {label} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 16,
        "minHeight": undefined,
      },
      undefined,
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
        },
        false,
        false,
        false,
        false,
        Object {
          "fontSize": 16,
          "lineHeight": 20.8,
        },
        Object {
          "fontSize": 12,
          "lineHeight": 14.399999999999999,
        },
        false,
        false,
        false,
        false,
        Object {
          "color": "#9b9b9b",
        },
        false,
        false,
        Object {
          "marginVertical": 2.5,
        },
      ]
    }
  >
    Hello World
  </Text>
  <TextInput
    allowFontScaling={true}
    autoCapitalize="none"
    autoCorrect={false}
    blurOnSubmit={true}
    editable={true}
    keyboardType="default"
    multiline={false}
    onBlur={[Function]}
    onFocus={[Function]}
    placeholderTextColor="#9b9b9b"
    style={
      Array [
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#dbdbdb",
          "borderRadius": 2.5,
          "borderWidth": 1,
          "color": "#4a4a4a",
          "fontSize": 16,
          "fontWeight": "normal",
          "paddingHorizontal": 5,
          "paddingVertical": 7.5,
          "width": "100%",
        },
        false,
        false,
        undefined,
      ]
    }
    underlineColorAndroid="transparent"
    value=""
  />
</View>
`;

exports[`<Input> when {lines} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 16,
        "minHeight": undefined,
      },
      undefined,
    ]
  }
>
  <TextInput
    allowFontScaling={true}
    autoCapitalize="none"
    autoCorrect={false}
    blurOnSubmit={true}
    editable={true}
    keyboardType="default"
    multiline={true}
    numberOfLines={5}
    onBlur={[Function]}
    onFocus={[Function]}
    placeholderTextColor="#9b9b9b"
    style={
      Array [
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#dbdbdb",
          "borderRadius": 2.5,
          "borderWidth": 1,
          "color": "#4a4a4a",
          "fontSize": 16,
          "fontWeight": "normal",
          "paddingHorizontal": 5,
          "paddingVertical": 7.5,
          "width": "100%",
        },
        false,
        false,
        undefined,
      ]
    }
    underlineColorAndroid="transparent"
    value=""
  />
</View>
`;

exports[`<Input> when {style} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 16,
        "minHeight": undefined,
      },
      Object {
        "backgroundColor": "rgba(0,255,0,0.25)",
        "padding": 10,
        "width": 256,
      },
    ]
  }
>
  <TextInput
    allowFontScaling={true}
    autoCapitalize="none"
    autoCorrect={false}
    blurOnSubmit={true}
    editable={true}
    keyboardType="default"
    multiline={false}
    onBlur={[Function]}
    onFocus={[Function]}
    placeholderTextColor="#9b9b9b"
    style={
      Array [
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#dbdbdb",
          "borderRadius": 2.5,
          "borderWidth": 1,
          "color": "#4a4a4a",
          "fontSize": 16,
          "fontWeight": "normal",
          "paddingHorizontal": 5,
          "paddingVertical": 7.5,
          "width": "100%",
        },
        false,
        false,
        undefined,
      ]
    }
    underlineColorAndroid="transparent"
    value=""
  />
</View>
`;

exports[`<Input> when {value} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 16,
        "minHeight": undefined,
      },
      undefined,
    ]
  }
>
  <TextInput
    allowFontScaling={true}
    autoCapitalize="none"
    autoCorrect={false}
    blurOnSubmit={true}
    editable={true}
    keyboardType="default"
    multiline={false}
    onBlur={[Function]}
    onFocus={[Function]}
    placeholderTextColor="#9b9b9b"
    style={
      Array [
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#dbdbdb",
          "borderRadius": 2.5,
          "borderWidth": 1,
          "color": "#4a4a4a",
          "fontSize": 16,
          "fontWeight": "normal",
          "paddingHorizontal": 5,
          "paddingVertical": 7.5,
          "width": "100%",
        },
        false,
        false,
        undefined,
      ]
    }
    underlineColorAndroid="transparent"
    value="soyjavi"
  />
</View>
`;
